Harden Shiprocket shipping logic for production
- Fix Badge import in track-order page (named export)
- Add comprehensive payload validation before Shiprocket API calls
  - Validate phone (10 digits), pincode (6 digits)
  - Validate weight, dimensions > 0
  - Validate pickup_location, order_items not empty
- Enhance token refresh with proper logging
  - SHIPROCKET_TOKEN_EXPIRED, SHIPROCKET_TOKEN_REFRESH_START/OK/FAIL
- Add 401 retry logic to all Shiprocket API calls
  - createShiprocketOrder, generateAWB, getShipmentTracking
  - calculateShippingRate, getAllShippingRates
  - checkServiceability, createReversePickup
- Ensure no silent failures - all catch blocks log and save to DB
- Replace 'any' types with proper TypeScript interfaces

Build compiles with 0 errors.

--- a/env.example
+++ b/env.example
@@ -25,16 +25,7 @@ OTP_PROVIDER=mock
 # OTP Provider API Key
 # Required when using a real OTP provider (Twilio, Msg91, etc.)
 # Leave empty when using mock provider
-# Example for Twilio: your_twilio_account_sid
-# Example for Msg91: your_msg91_auth_key
 OTP_API_KEY=
-
-# OTP Provider Additional Configuration (provider-specific)
-# These may be needed depending on your OTP provider
-# Examples:
-# OTP_PROVIDER_SID=your_twilio_account_sid
-# OTP_PROVIDER_AUTH_TOKEN=your_twilio_auth_token
-# OTP_PROVIDER_FROM=your_sender_number_or_id
 
 # ============================================================================
 # Payment Gateway - Razorpay
@@ -42,17 +33,41 @@ OTP_API_KEY=
 
 NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id
 RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+RAZORPAY_WEBHOOK_SECRET=your_razorpay_webhook_secret
 
 # ============================================================================
 # Shipping - Shiprocket
 # ============================================================================
 
+# Enable/disable automatic shipment creation
+# Set to "true" in production when ready to auto-book shipments
+SHIPROCKET_ENABLED=false
+
+# Shiprocket API credentials
 SHIPROCKET_BASE_URL=https://apiv2.shiprocket.in/v1
+SHIPROCKET_AUTH_URL=https://apiv2.shiprocket.in/v1/external/auth/login
 SHIPROCKET_EMAIL=your_shiprocket_email
 SHIPROCKET_PASSWORD=your_shiprocket_password
-SHIPROCKET_API_KEY=your_shiprocket_api_key
-SHIPROCKET_API_SECRET=your_shiprocket_api_secret
 SHIPROCKET_WEBHOOK_SECRET=your_shiprocket_webhook_secret
+
+# Pickup location name (must match name in Shiprocket dashboard)
+SHIPROCKET_PICKUP_LOCATION=Primary
+
+# Pickup pincode (warehouse location for rate calculation)
+SHIPROCKET_PICKUP_PINCODE=110001
+
+# ============================================================================
+# Default Shipment Dimensions (used for all orders)
+# ============================================================================
+
+# Default package weight in kilograms
+# Used for shipping rate calculation and Shiprocket booking
+DEFAULT_SHIPMENT_WEIGHT=1.5
+
+# Default package dimensions in centimeters
+DEFAULT_SHIPMENT_LENGTH=40
+DEFAULT_SHIPMENT_BREADTH=30
+DEFAULT_SHIPMENT_HEIGHT=10
 
 # ============================================================================
 # Application Configuration
@@ -62,8 +77,11 @@ SHIPROCKET_WEBHOOK_SECRET=your_shiprocket_webhook_secret
 # Options: "development", "production", "test"
 NODE_ENV=development
 
-# Next.js Configuration
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Site URL (used for email links and API callbacks)
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# System API Token (for internal API calls)
+SYSTEM_API_TOKEN=your_secure_system_token
 
 # ============================================================================
 # Optional: Email Service (if using SendGrid or similar)
@@ -78,16 +96,6 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # 1. Copy this file to .env.local for local development
 # 2. Never commit .env.local or .env files to version control
 # 3. For production, set these variables in your hosting platform (Vercel, etc.)
-# 4. Phase 4.1 Order Tracking works with mock provider by default
-#    - OTPs will be logged to console in development
-#    - Set OTP_PROVIDER and OTP_API_KEY when ready to use real SMS provider
-
-
-
-
-
-
-
-
-
-
+# 4. SHIPROCKET_ENABLED must be "true" for automatic shipment booking
+# 5. Stock is decremented immediately after payment is confirmed
+# 6. Internal shipping cost is calculated and stored but NOT charged to customers
