Fix Shiprocket integration: ENV-based URLs, address validation, and error handling
- Use SHIPROCKET_RATE_URL and SHIPROCKET_ORDER_CREATE_URL from ENV (no hardcoded URLs)
- Add validateShiprocketEnv() to check all required ENV vars before API calls
- Fix webhook to read shipping_pincode from order.shipping_pincode first
- Add comprehensive address validation before shipment creation
- Ensure all errors are logged and saved (no silent failures)
- Mark shipment_status=FAILED on validation/config errors (allows retry)
- Update env.example with new SHIPROCKET_RATE_URL and SHIPROCKET_ORDER_CREATE_URL

--- a/env.example
+++ b/env.example
@@ -46,6 +46,8 @@ SHIPROCKET_ENABLED=false
 # Shiprocket API credentials
 SHIPROCKET_BASE_URL=https://apiv2.shiprocket.in/v1
 SHIPROCKET_AUTH_URL=https://apiv2.shiprocket.in/v1/external/auth/login
+SHIPROCKET_RATE_URL=https://apiv2.shiprocket.in/v1/external/courier/serviceability/
+SHIPROCKET_ORDER_CREATE_URL=https://apiv2.shiprocket.in/v1/external/orders/create/adhoc
 SHIPROCKET_EMAIL=your_shiprocket_email
 SHIPROCKET_PASSWORD=your_shiprocket_password
 SHIPROCKET_WEBHOOK_SECRET=your_shiprocket_webhook_secret
