feat: Integrate Resend for email OTP and order confirmations
- Replace SendGrid with Resend as email provider

- Add unified email service with Resend SDK

- Implement OTP and order confirmation email templates

- Update OTP service to send emails via Resend

- Update payment handlers to use new email service

- Add structured logging for email events

- Update env.example with Resend configuration

--- a/env.example
+++ b/env.example
@@ -86,11 +86,18 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 SYSTEM_API_TOKEN=your_secure_system_token
 
 # ============================================================================
-# Optional: Email Service (if using SendGrid or similar)
+# Email Service - Resend
 # ============================================================================
 
-# SENDGRID_API_KEY=your_sendgrid_api_key
-# SENDGRID_FROM_EMAIL=noreply@yourdomain.com
+# Resend API Key (required for email OTP and order confirmations)
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=re_your_resend_api_key
+
+# From email address (must be verified in Resend dashboard)
+RESEND_FROM_EMAIL=noreply@yourdomain.com
+
+# From name (optional, defaults to "ZEYNORA")
+RESEND_FROM_NAME=ZEYNORA
 
 # ============================================================================
 # Notes:
