--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
-    "@sendgrid/mail": "^8.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/storage-js": "^2.83.0",
@@ -32,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.1",
+    "resend": "^6.8.0",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
