Add sender selection for email types (auth vs orders)
- Add separate sender configuration for auth and orders emails
- Auth emails use RESEND_AUTH_FROM_EMAIL (auth@zeynora.in)
- Order emails use RESEND_ORDERS_FROM_EMAIL (orders@zeynora.in)
- Add getAuthSender() and getOrdersSender() helper functions
- Update sendOTPEmail() to use auth sender
- Update sendOrderConfirmationEmail() to use orders sender
- Add error handling for missing required env variables
- Update env.example with new sender configuration variables
- Maintains single Resend client instance
- Templates remain sender-agnostic

--- a/env.example
+++ b/env.example
@@ -93,11 +93,18 @@ SYSTEM_API_TOKEN=your_secure_system_token
 # Get your API key from: https://resend.com/api-keys
 RESEND_API_KEY=re_your_resend_api_key
 
-# From email address (must be verified in Resend dashboard)
-RESEND_FROM_EMAIL=noreply@yourdomain.com
-
-# From name (optional, defaults to "ZEYNORA")
+# Default from name (used as fallback for sender-specific names)
 RESEND_FROM_NAME=ZEYNORA
+
+# Auth Email Sender (for OTP and authentication emails)
+# Must be verified in Resend dashboard
+RESEND_AUTH_FROM_EMAIL=auth@zeynora.in
+RESEND_AUTH_FROM_NAME=Auth
+
+# Orders Email Sender (for order confirmations and order-related emails)
+# Must be verified in Resend dashboard
+RESEND_ORDERS_FROM_EMAIL=orders@zeynora.in
+RESEND_ORDERS_FROM_NAME=Zeynora Orders
 
 # ============================================================================
 # Notes:
